<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuTitleNews"
        android:icon="@drawable/ic_news"
        android:title="@string/main_menu_title_news"/>
    <item
        android:id="@+id/menuTitleResults"
        android:icon="@drawable/ic_results"
        android:title="@string/main_menu_title_results" />
    <item
        android:id="@+id/menuTitleCalendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/main_menu_title_calendar" />
    <item
        android:id="@+id/menuTitleCommands"
        android:icon="@drawable/ic_commands"
        android:title="@string/main_menu_title_commands" />
    <item
        android:id="@+id/menuTitleTournaments"
        android:icon="@drawable/ic_tournaments"
        android:title="@string/main_menu_title_tournaments" />
</menu>